--- a/vagrant/dormouse-001/Vagrantfile
+++ b/vagrant/dormouse-001/Vagrantfile
@@ -12,6 +12,7 @@ Vagrant.configure(2) do |config|
   config.ssh.private_key_path = node['user']['privatekey']
 
   config.vm.provider 'virtualbox' do |vb|
+    vb.cpus = 2
     vb.memory = '2048'
   end
 end
